# conduit

./: .gitmodules  CMakeLists.txt  LICENSE  README.rst
doc/: Thumbs.db  channel-views.md  conduit.rst  slides.style
examples/: CMakeLists.txt  boost-signals-simple-speed-test.cpp_  channel-benchmark.cpp  channel-groups.cpp  conduit-example.cpp  conduit-simple-speed-test.cpp  conduit-speed-test.cpp  delayed-call.cpp  hello-world(custom-type).cpp  hello-world(lua).cpp  hello-world.cpp  lua-binding.cpp  lua-binding.lua  merge.cpp  priority-schedule.cpp  return-multiple-values.cpp  scheduler-benchmark.cpp  small-callable.cpp
examples/pipeline/: CMakeLists.txt  adds.lua  conduit  decode.cpp  decode.lua  events.h  exec.cpp  fe.cpp  pipeline.cpp  pipeline.h  pipeline.ops
examples/pipeline/cmake/: libc++.cmake  stdc++fs.cmake
examples/pipeline/include/: events.h  pipeline.h  util.h
examples/pipeline/src/: decode.cpp  exec.cpp  exec.py  fetch.cpp  main.cpp
examples/top-level/: CMakeLists.txt  fmt  gen-version-header.py
examples/top-level/include/: events.h  pipeline.h
examples/top-level/src/: exec.cpp  gen-version-header.py  main.cpp  util.cpp
include/conduit/: accordion.h  binder.h  botch.h  callable-info.h  conduit-utility.h  conduit.h  delayed-call.h  expected.h  fixvec.h  function.h  lua-wrapper.h  optional.h  repl.h  small-callable.h
test/: botch-throw-test.cpp  conduit-basic-example.cpp  conduit-speed-test-other.cpp  conduit-speed-test.cpp  optuple-test.cpp
tests/: CMakeLists.txt  botch-throw-test.cpp  changer-test.cpp  fixvec-test.cpp  observer-test.cpp  optuple-test.cpp
tools/analyze/: CMakeLists.txt  README.rst  analyze.cpp  analyze.py
tools/analyze/test/: CMakeLists.txt  analyze-test.cpp
